--- a/main.css
+++ b/main.css
@@ -21,9 +21,9 @@
 
 body {
   color: #454545;
-  background: #D1D6E7;
-  margin-left: 30%;
-  margin-right: 30%;
+  background: #EEECE3;
+  margin-left: 20%;
+  margin-right: 20%;
 }
 
 h1,
@@ -32,6 +32,26 @@ h3,
 h4,
 .nav-item {
   font-family: "Vesper Libre", serif;
+}
+
+.column {
+  float: left;
+}
+
+.sidebar {
+  width: 20%;
+}
+
+.content {
+  padding-left: 5.0%;
+  padding-right: 20%;
+  width: 55.0%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .subheader {
@@ -56,6 +76,18 @@ h2 {
   margin-bottom: 0;
 }
 
+h1.sidebar-name {
+  margin-left: 0.4em;
+  padding-top: 20%;
+  font-size: 1.4em;
+}
+
+p.sidebar-blurb {
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 0.6em;
+}
+
 h3 {
   font-weight: 400;
   font-size: 1.4em;
@@ -69,7 +101,6 @@ h4 {
 a {
   font-weight: 700;
   color: #454545;
-  -webkit-transition: color;
   transition: color;
   text-decoration: none;
 }
@@ -78,7 +109,6 @@ a:hover,
 a:focus,
 a:active {
   color: #E63E62;
-  -webkit-transition-duration: 0.5s;
   transition-duration: 0.5s;
 }
 
@@ -141,10 +171,21 @@ p a:active {
   text-decoration: none;
 }
 
+p a.storageos {
+  color: #B33F62;
+}
+
+p a.storageos:hover,
+p a.storageos:focus,
+p a.storageos:active {
+  color: #61C202;
+  text-decoration: none;
+}
+
 .brace-effect a::before,
 .brace-effect a::after {
   opacity: 0;
-  -webkit-transition: -webkit-transform 0.2s, opacity 0.4s;
+  transition: -webkit-transform 0.2s, opacity 0.4s;
   transition: transform 0.2s, opacity 0.4s;
 }
 
@@ -203,6 +244,21 @@ a.nav-item.icon.twitter:active {
   border-bottom-color: #1DA1F2;
 }
 
+.brace-effect a.nav-item.icon.linkedin::before {
+  color: #0077B5;
+}
+
+.brace-effect a.nav-item.icon.linkedin::after {
+  color: #0077B5;
+}
+
+a.nav-item.icon.linkedin:hover,
+a.nav-item.icon.linkedin:focus,
+a.nav-item.icon.linkedin:active {
+  color: #0077B5;
+  border-bottom-color: #0077B5;
+}
+
 p.desc {
   margin-top: 0;
 }
@@ -213,9 +269,9 @@ nav.nav-menu {
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  -webkit-box-pack: left;
+  -ms-flex-pack: left;
+  justify-content: left;
 }
 
 nav .nav-item {
