--- a/main.css
+++ b/main.css
@@ -300,15 +300,15 @@ footer.p {
 
 @media screen and (max-width: 1500px) {
   body {
-    margin-left: 22.5%;
-    margin-right: 22.5%;
+    margin-left: 15.0%;
+    margin-right: 15.0%;
   }
 }
 
 @media screen and (max-width: 1200px) {
   body {
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 10%;
+    margin-right: 10%;
   }
 }
 
@@ -316,6 +316,33 @@ footer.p {
   body {
     margin-left: 17.5%;
     margin-right: 17.5%;
+  }
+
+  .sidebar {
+    width: 100%;
+  }
+
+  h1.sidebar-name {
+    padding-top: 0px;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
+  p.sidebar-blurb {
+    align-text: center;
+  }
+
+  nav.nav-menu {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
+  .content {
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
